# railguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  install.sh  railguard.toml  railgun.example.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/docs/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  wrangler.jsonc
apps/docs/app/: layout.config.tsx  page.tsx
apps/docs/components/: nf-icon.tsx  railguard-logo.tsx
apps/docs/content/docs/: cli.mdx  configuration.mdx  policy-engine.mdx
apps/docs/content/docs/api/: index.mdx  types.mdx
crates/rg-policy/: Cargo.toml
crates/rg-policy/src/: commands.rs  engine.rs  error.rs  lib.rs  network.rs  paths.rs  secrets.rs  tools.rs
crates/rg-types/: Cargo.toml
crates/rg-types/src/: block_reason.rs  config.rs  lib.rs  tool_input.rs  verdict.rs
docs/: package-lock.json  package.json  wrangler.jsonc
docs/app/: layout.config.tsx  layout.tsx  page.tsx
docs/components/: nf-icon.tsx  railgun-logo.tsx
docs/content/docs/: cli.mdx  configuration.mdx  getting-started.mdx  index.mdx  meta.json  policy-engine.mdx
docs/content/docs/api/: index.mdx  types.mdx
hooks/: hooks.json
plugins/railgun-bash/: hook.sh
plugins/railgun-bash/rules.d/: commands.json  network.json  paths.json  secrets.json  tools.json
scripts/: build-release.sh  post-tool-use.sh  pre-tool-use.sh
skills/railguard/: SKILL.md
skills/railgun/: SKILL.md
