[package]
name = "rg-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools"]
description = "Shared types for Railguard: Config, Verdict, BlockReason, HookInput"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true
